[project]
name = "comment-scrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Pimentel",email = "lucaspimentel808@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)"
]

[tool.poetry]
packages = [{include = "comment_scrapper", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
